# proof-pr

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  PRODUCT_SPEC.md  README.md  SECURITY.md  action.yml  proof-pr.toml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: proof-pr.yml
scripts/: run-proof-pr.py  run-tests.py
src/proof_pr/: __init__.py  __main__.py  cli.py  config.py  git_context.py  models.py  reporting.py  runner.py
tests/: __init__.py  test_github_action.py  test_proof_pr.py
