[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "proof-pr"
version = "0.1.0"
description = "Commit-bound verification evidence for pull requests"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "HsiangNianian" }]
dependencies = []

[project.scripts]
proof-pr = "proof_pr.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/proof_pr"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
